--- a/ios/Podfile
+++ b/ios/Podfile
@@ -78,6 +78,8 @@ target 'GpsTracker' do
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
 
 
+  pod 'react-native-ble-plx', :path => '../node_modules/react-native-ble-plx'
+
   target 'GpsTrackerTests' do
     inherit! :complete
     # Pods for testing
