--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@reduxjs/toolkit": "^1.3.6",
     "react": "16.11.0",
     "react-native": "0.62.2",
+    "react-native-ble-plx": "^2.0.0",
     "react-native-bottom-toolbar": "^4.3.0",
     "react-native-vector-icons": "^6.6.0",
     "react-redux": "^7.2.0"
