--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.11.0",
     "@react-native-community/geolocation": "^2.0.2",
     "@react-native-mapbox-gl/maps": "^8.1.0-rc.1",
     "@reduxjs/toolkit": "^1.3.6",
@@ -17,6 +18,7 @@
     "react-native": "0.62.2",
     "react-native-ble-plx": "^2.0.0",
     "react-native-bottom-toolbar": "^4.3.0",
+    "react-native-local-mongodb": "^2.2.9",
     "react-native-vector-icons": "^6.6.0",
     "react-redux": "^7.2.0"
   },
