--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "react-native-ble-plx": "^2.0.0",
     "react-native-bottom-toolbar": "^4.3.0",
     "react-native-local-mongodb": "^2.2.9",
+    "react-native-side-menu-updated": "^1.2.1",
     "react-native-vector-icons": "^6.6.0",
-    "react-redux": "^7.2.0"
+    "react-redux": "^7.2.0",
+    "shortid": "^2.2.15"
   },
   "devDependencies": {
     "@babel/core": "^7.10.2",
