--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.11.0",
+    "@react-native-community/checkbox": "^0.4.2",
     "@react-native-community/geolocation": "^2.0.2",
     "@react-native-mapbox-gl/maps": "^8.1.0-rc.1",
     "@reduxjs/toolkit": "^1.3.6",
+    "lodash": "^4.17.19",
     "react": "16.11.0",
     "react-native": "0.62.2",
     "react-native-ble-plx": "^2.0.0",
