--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lodash": "^4.17.19",
     "react": "16.11.0",
     "react-native": "0.62.2",
+    "react-native-base64": "^0.1.0",
     "react-native-ble-plx": "^2.0.0",
     "react-native-bottom-toolbar": "^4.3.0",
     "react-native-local-mongodb": "^2.2.9",
